--- a/jk_dao/pom.xml
+++ b/jk_dao/pom.xml
@@ -9,7 +9,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>dao</artifactId>
+    <artifactId>jk_dao</artifactId>
     <dependencies>
         <dependency>
             <groupId>top.greathead</groupId>
