--- a/jk_web/pom.xml
+++ b/jk_web/pom.xml
@@ -10,7 +10,7 @@
     <modelVersion>4.0.0</modelVersion>
     <packaging>war</packaging>
 
-    <artifactId>web</artifactId>
+    <artifactId>jk_web</artifactId>
     <dependencies>
 
         <dependency>
@@ -18,11 +18,7 @@
             <artifactId>jk_service</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
-        <dependency>
-            <groupId>top.greathead</groupId>
-            <artifactId>service</artifactId>
-            <version>1.0-SNAPSHOT</version>
-        </dependency>
+
     </dependencies>
 
 </project>
