--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
         <module>jk_service</module>
         <module>jk_utils</module>
         <module>jk_web</module>
+        <module>jk_ws</module>
     </modules>
 
     <properties>
@@ -284,6 +285,8 @@
             <artifactId>ehcache-core</artifactId>
             <version>2.6.6</version>
         </dependency>
+
+
     </dependencies>
 
     <build>
