基础信息基本完毕

--- a/jk_web/src/main/resources/db.properties
+++ b/jk_web/src/main/resources/db.properties
@@ -4,6 +4,6 @@ jdbc.url=jdbc:oracle:thin:@Berg-Oracle:1521:orcl
 jdbc.username=jk
 jdbc.password=jk
 
-#c3p0属性
+#c3p0部分属性
 initialPoolSize=10
 maxPoolSize=20
