--- a/jk_web/src/main/resources/db.properties
+++ b/jk_web/src/main/resources/db.properties
@@ -1,4 +1,4 @@
-#jdbc属性
+#jdbc部分属性
 jdbc.driverClassName=oracle.jdbc.driver.OracleDriver
 jdbc.url=jdbc:oracle:thin:@Berg-Oracle:1521:orcl
 jdbc.username=jk
