购销合同提交取消状态判断增加

--- a/jk_web/src/main/resources/db.properties
+++ b/jk_web/src/main/resources/db.properties
@@ -1,6 +1,6 @@
 #jdbc≤ø∑÷ Ù–‘
 jdbc.driverClassName=oracle.jdbc.driver.OracleDriver
-jdbc.url=jdbc:oracle:thin:@Berg-Oracle:1521:orcl
+jdbc.url=jdbc:oracle:thin:@Yi:1521:orcl
 jdbc.username=jk
 jdbc.password=jk
 
